--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,25 @@
 /* Place CSS styles here */
+.primary-button{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: lightpink ;
+    background-color: black;
+    border: 1px solid black;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 8px;
+    transition: all 1s ease;
+}
+
+.primary-button:hover {
+  color: black;
+  background-color: lightpink;
+}
+
+/* Fake border that doesn't effect the size*/
+/* test it by tabbing*/ 
+.primary-button:focus {
+  box-shadow: 0 0 0 4px aqua;
+} 
