--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 /* Place CSS styles here */
+
+.body {
+  background-image: url("starwarstheme.jpg");
+}
+
 .primary-button{
     padding-top: 20px;
     padding-bottom: 20px;
@@ -18,12 +23,53 @@
   background-color: lightpink;
 }
 
+.secondary-button{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: lightblue ;
+  background-color: black;
+  border: 1px solid black;
+  font-size: 20px;
+  font-weight: 600;
+  border-radius: 8px;
+  transition: all 1s ease;
+}
+.secondary-button:hover {
+color: black;
+background-color: lightblue;
+}
+
+.error-button{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: lightsalmon ;
+  background-color: black;
+  border: 1px solid black;
+  font-size: 20px;
+  font-weight: 600;
+  border-radius: 8px;
+  transition: all 1s ease;
+}
+
+.error-button:hover {
+color: black;
+background-color: lightsalmon;
+}
+
 /* Fake border that doesn't effect the size*/
 /* test it by tabbing*/ 
 .primary-button:focus {
   box-shadow: 0 0 0 4px aqua;
 } 
 
-body {
-  background-image: url("starwarstheme.jpg");
-}
+.secondary-button:focus {
+  box-shadow: 0 0 0 4px palevioletred;
+} 
+
+.error-button:focus {
+  box-shadow: 0 0 0 4px lightgreen;
+} 
