--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 /* Place CSS styles here */
 
 body {
-  background-image: image(starwarstheme.jpg)
-  background-color: olive
+  background-image: url("\img\starwars2.jpg");
+  background-color: olive;
 } 
 
 .primary-button{
