adding flex to header

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,8 @@ body {
 
 h1 {
   font-family: 'Oswald', sans-serif;
+  display:flex;
+  justify-content: center;
 }
 .primary-button{
     padding-top: 20px;
