--- a/css/main.css
+++ b/css/main.css
@@ -114,3 +114,40 @@ has an error and :focus
 .error-button:focus {
   box-shadow: 0 0 0 4px lightgreen;
 } 
+
+@media screen and (max-width: 767px) {
+  html {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .buttons {
+    font-size: 14px;
+  }
+}
+
+
+
+
+@media screen and (min-width: 480px) {
+  body {
+    background-color: rgb(61, 204, 61);
+  }
+}
+
+.buttons {
+  display: flex;
+}
+
+@media screen and (max-width: 767px) {
+  .buttons {
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .buttons {
+    flex-direction: row;
+  }
+}
